--- a/res/layout/appbenri_layout_app_item.xml
+++ b/res/layout/appbenri_layout_app_item.xml
@@ -6,8 +6,15 @@
     android:orientation="vertical" >
     
     <TextView 
+        android:id="@+id/appbenri_text_app_label"
+        android:paddingTop="@dimen/appbenri_default_margin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView 
         android:id="@+id/appbenri_text_app_package"
         android:paddingTop="@dimen/appbenri_default_margin"
+        android:paddingBottom="@dimen/appbenri_default_margin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
