--- a/res/layout/appbenri_fragment_search_app_activity.xml
+++ b/res/layout/appbenri_fragment_search_app_activity.xml
@@ -10,6 +10,8 @@
     android:orientation="vertical" >
 
     <EditText
+        android:id="@+id/appbenri_edittext_app_search"
+        android:hint="@string/appbenri_app_package_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
