--- a/res/layout/appbenri_fragment_search_app_activity.xml
+++ b/res/layout/appbenri_fragment_search_app_activity.xml
@@ -2,18 +2,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.fnobi.appbenri.MainActivity$PlaceholderFragment"
-    android:orientation="vertical" >
+    tools:context="com.fnobi.appbenri.MainActivity$PlaceholderFragment" >
 
     <EditText
         android:id="@+id/appbenri_edittext_app_search"
-        android:hint="@string/appbenri_app_package_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:hint="@string/appbenri_app_package_name" />
 
     <ListView
         android:id="@+id/appbenri_listview"
