--- a/res/layout/appbenri_item_app_activity.xml
+++ b/res/layout/appbenri_item_app_activity.xml
@@ -3,25 +3,38 @@
     android:id="@+id/appbenri_listitem"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
-    <TextView 
-        android:id="@+id/appbenri_text_app_label"
-        android:paddingTop="@dimen/appbenri_default_margin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    android:orientation="horizontal" >
 
-    <TextView 
-        android:id="@+id/appbenri_text_app_package"
-        android:paddingTop="@dimen/appbenri_default_margin"
-        android:paddingBottom="@dimen/appbenri_default_margin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ImageView
+        android:id="@+id/appbenri_imageview_app_icon"
+        android:layout_width="@dimen/appbenri_icon_size"
+        android:layout_height="match_parent"
+        android:layout_marginRight="@dimen/appbenri_default_margin"
+        android:contentDescription="@string/appbenri_icon_image" />
 
-    <TextView 
-        android:id="@+id/appbenri_text_app_activity"
-        android:paddingBottom="@dimen/appbenri_default_margin"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/appbenri_text_app_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/appbenri_default_margin" />
+
+        <TextView
+            android:id="@+id/appbenri_text_app_package"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/appbenri_default_margin"
+            android:paddingTop="@dimen/appbenri_default_margin" />
+
+        <TextView
+            android:id="@+id/appbenri_text_app_activity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/appbenri_default_margin" />
+    </LinearLayout>
 
 </LinearLayout>
