--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -4,5 +4,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="appbenri_default_margin">8dp</dimen>
+    <dimen name="appbenri_icon_size">48dp</dimen>
 
 </resources>
