--- a/res/layout/appbenri_item_app_activity.xml
+++ b/res/layout/appbenri_item_app_activity.xml
@@ -21,21 +21,22 @@
         <TextView
             android:id="@+id/appbenri_text_app_label"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/appbenri_default_margin" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/appbenri_text_app_package"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/appbenri_default_margin"
-            android:paddingTop="@dimen/appbenri_default_margin" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/appbenri_text_app_activity"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/appbenri_default_margin" />
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/appbenri_text_app_install_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 </LinearLayout>
