storeを開けるようにする

--- a/res/layout/appbenri_item_app_activity.xml
+++ b/res/layout/appbenri_item_app_activity.xml
@@ -13,6 +13,12 @@
         android:layout_marginRight="@dimen/appbenri_default_margin"
         android:contentDescription="@string/appbenri_icon_image" />
 
+    <Button
+        android:id="@+id/appbenri_button_store"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="store" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
