--- a/res/layout/appbenri_fragment_search_app_activity.xml
+++ b/res/layout/appbenri_fragment_search_app_activity.xml
@@ -11,42 +11,10 @@
         android:orientation="vertical"
         android:padding="@dimen/appbenri_default_margin" >
 
-        <EditText
-            android:id="@+id/appbenri_edittext_app_search"
+        <Spinner
+            android:id="@+id/appbenri_spinner_app_activity_search"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/appbenri_app_package_name" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-            <CheckBox
-                android:id="@+id/appbenri_check_app_package_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="false" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/appbenri_activity_package_name" />
-
-            <CheckBox
-                android:id="@+id/appbenri_check_app_install_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/appbenri_default_margin"
-                android:checked="false" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:text="@string/appbenri_install_date" />
-        </LinearLayout>
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <FrameLayout
